# NTSC-Video-Tape

./: .gitignore  CMakeLists.txt  OPTIMIZATIONS_APPLIED.md  README.md  VHS_VCR_NTSC_Technical_Reference.md  bench_ntsc.cpp  main.cpp  test_performance.sh  vhs_implementation_plan.md
.monkeycode/specs/2026-05-10-vhs-helical-scan-enhancement/: design.md  requirements.md  tasklist.md
.qwen/: settings.json  settings.json.orig
include/: common.h
src/: app_state.h  audio_capture.cpp  audio_capture.h  capture_thread.cpp  capture_thread.h  color_under.cpp  color_under.h  constants.h  crt_tv.cpp  crt_tv.h  draw_ui.cpp  fm_luma.cpp  fm_luma.h  main.cpp  ntsc_simulator.cpp  ntsc_simulator.h  processing_pipeline.cpp  processing_pipeline.h  sdl_utils.cpp  sdl_utils.h  tape_degradation.cpp  tape_degradation.h  ui.cpp  ui.h  vcr_audio.cpp  vcr_audio.h  vcr_brand.h  video_effects.cpp  video_effects.h
